mera web mera marzi 1

--- a/Bujinech.html
+++ b/Bujinech.html
@@ -3,7 +3,7 @@
 
 <head >
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="../Style/Style.css" />
+  <link rel="stylesheet" href="Style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet" />
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="secondhalf">
-          <img src="../img/bg.jpg" alt="Building-img" />
+          <img src="bg.jpg" alt="Building-img" />
         </div>
       </div>
     </section>
@@ -117,7 +117,7 @@
     </div>
 </section>
   <hr />
-  <form action="../php/mail.php" method="post">
+  <form action="mail.php" method="post">
     <section class="Contact" id="contact">
       <h2 class="text-centre">Contact Us</h2>
       <div class="form">
@@ -133,12 +133,6 @@
   <footer class="footer-dis">
     <div class="footer-left">
       <h3>SLS <span>Land surveyor</span></h3>
-      <p class="footer-links">
-        <a href="#home"></a>
-        <a href="#home"></a>
-        <a href="#home"></a>
-        <a href="#home"></a>
-      </p>
       <p class="footer-company-name">
         Copyright 2023 &copy;
         <p><strong>StandardLandSurveyors</strong></p>
@@ -152,10 +146,12 @@
     <div>
       <i class="fa fa-phone"></i>
       <p><span>0321-5561314</span></p>
+      <p><span>0300-5306978</span></p>
+      <p><span>0317-0517837</span></p>
     </div>
     <h4><a href="mailto:hassaanulhaq82@gmail.com">Contact Us</a></h4>
   </footer>
-  <script src="../js/resp.js">
+  <script src="resp.js">
   </script>
 </body>
 
