--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../Style/style-about.css" />
+    <link rel="stylesheet" href="style-about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,9 +24,9 @@
       <nav class="navbar background h-nav-resp">
         <ul class="nav-list v-class-resp">
           <div class="logo">
-            <img src="../img/Capture.PNG" alt="logo" />
+            <img src="Capture.PNG" alt="logo" />
           </div>
-          <li><a href="http://127.0.0.1:5500/html/Bujinech.html">Home</a></li>
+          <li><a href="Bujinech.html">Home</a></li>
           <li>
             <a href="#">About</a>
             <ul>
@@ -259,6 +259,6 @@
       </table>
       <!-- </section> -->
     </section>
-    <script src="../js/resp.js"></script>
+    <script src="resp.js"></script>
   </body>
 </html>
