--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <nav class="navbar background h-nav-resp">
       <ul class="nav-list v-class-resp">
         <div class="logo">
-          <img src="../img/Capture.PNG" alt="logo" />
+          <img src="Capture.PNG" alt="logo" />
         </div>
         <li><a href="#home">Home</a></li>
-        <li><a href="http://127.0.0.1:5500/html/About.html">About</a></li>
+        <li><a href="About.html">About</a></li>
         <!-- <li><a href="#services">Services</a></li> -->
         <li><a href="#contact"> Contact Us</a></li>
       </ul>
@@ -46,7 +46,7 @@
             <strong>adept</strong> methods that will assure you.
           </p>
           <div class="buttons">
-            <a href="http://127.0.0.1:5500/html/About.html" class="change"><strong> About us</strong></a>
+            <a href="About.html" class="change"><strong> About us</strong></a>
             <a href="#info"class="change" id="#info">  <u> <strong>Information</strong> </u></a>
           </div>
         </div>
