--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
           <div class="logo">
             <img src="Capture.PNG" alt="logo" />
           </div>
-          <li><a href="Bujinech.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li>
             <a href="#">About</a>
             <ul>
