done dana done done

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <input
             type="hidden"
             name="_next"
-            value="http://127.0.0.1:5500/thank%20you.html"
+            value="thankyou.html"
           />
           <input
           class="form-input"
