--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="rightnav v-class-resp">
         <input type="search" value="" name="search" id="search" onchange="openpage()" />
-        <button class="btn btn-sm" onclick="search()">search</button>
+        <button class="btn btn-sm" onclick="search()" type="submit">search</button>
       </div>
       <div class="burger">
         <div class="line"></div>
@@ -83,7 +83,7 @@
         </p>
       </div>
       <div class="thumbnail">
-        <img src="https://source.unsplash.com/1600x900/?building designs,plain designs" alt="bg2" class="imgfluid" />
+        <img loading="lazy" src="https://source.unsplash.com/1600x900/?building designs,plain designs" alt="bg2" class="imgfluid" />
       </div>
     </section>
 
@@ -100,7 +100,7 @@
       </div>
 
       <div class="thumbnail">
-        <img src="https://source.unsplash.com/1600x900/?Business members,Team" alt="bg2"
+        <img loading="lazy" src="https://source.unsplash.com/1600x900/?Business members,Team" alt="bg2"
           class="imgfluid" />
       </div>
   </section>
@@ -113,7 +113,7 @@
       </p>
     </div>
     <div class="thumbnail">
-      <img src="https://source.unsplash.com/1600x900/?Technology tools,Total Stations" alt="bg2" class="imgfluid" />
+      <img loading="lazy" src="https://source.unsplash.com/1600x900/?Technology tools,Total Stations" alt="bg2" class="imgfluid" />
     </div>
 </section>
   <hr />
