--- a/About.html
+++ b/About.html
@@ -149,74 +149,62 @@
               <td class="serial">1</td>
               <td>Ch. Nazar Ul Haq</td>
               <td>Director</td>
-              <td>DAE (civil)</td>
             </tr>
             <tr>
               <td class="serial">2</td>
               <td>Raja M. Ahmad</td>
               <td>Director</td>
-              <td>DAE(civil)</td>
             </tr>
             <tr>
               <td class="serial">3</td>
               <td>Noman Ahmed</td>
-              <td>Surveyor</td>
-              <td>Certificate</td>
+              <td>Senior Surveyor</td>
             </tr>
             <tr>
               <td class="serial">4</td>
               <td>Asif Ali</td>
-              <td>Surveyor</td>
-              <td>Certificate</td>
+              <td>Senior Surveyor</td>
             </tr>
             <tr>
               <td class="serial">5</td>
               <td>Muhammad Tayyab</td>
               <td>Surveyor</td>
-              <td>Certificate</td>
             </tr>
             <tr>
               <td class="serial">6</td>
               <td>Usman Ali</td>
               <td>Surveyor</td>
-              <td>Certificate</td>
             </tr>
             <tr>
               <td class="serial">7</td>
               <td>Arslan</td>
               <td>Surveyor</td>
-              <td>Certificate</td>
             </tr>
 
             <tr>
               <td class="serial">8</td>
               <td>Khalil</td>
               <td>Surveyor</td>
-              <td>Certificate</td>
             </tr>
             <tr>
               <td class="serial">9</td>
               <td>Sikandar Zaman</td>
               <td>A/Surveor</td>
-              <td>Middle</td>
             </tr>
             <tr>
               <td class="serial">10</td>
               <td>Hassaan Ul Haq</td>
               <td>A/Surveyor</td>
-              <td>Fsc.</td>
             </tr>
             <tr>
               <td class="serial">11</td>
               <td>Irfan Saleem</td>
               <td>Driver</td>
-              <td>Metric</td>
             </tr>
             <tr>
               <td class="serial">12</td>
               <td>Nadeem Naseem</td>
               <td>Driver</td>
-              <td>Middle</td>
             </tr>
           </tbody>
         </table>
