--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <section class="background firstSection">
       <div class="box-main">
         <div class="firsthalf">
-          <p class="text-small">This is official SLS website</p>
+          <p class="text-small">Standard Land Surveyors</p>
           <p class="text-big">
             In search of professional Land Surveyors? <i>Entrust us</i> for
             trusted and varified workers following
             <strong>adept</strong> methods that will assure you.
           </p>
           <div class="buttons">
-            <a href="About.html" class="change"><strong> About us</strong></a>
+            <a href="About.html" class="change"><strong> About Us</strong></a>
             <a href="#info"class="change" id="#info">  <u> <strong>Information</strong> </u></a>
           </div>
         </div>
